# Mechanicals-Nexus---Inference-Control

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  NEXUS-ABSCHLUSSBERICHT.md  NEXUS-REPORT.md  README.md  SECURITY.md  TUTORIAL.md  deep-research-report.md  pyproject.toml
.cursor/rules/: nexus-over-grep.mdc  nexus-query-policy-v2.mdc
.github/workflows/: ci.yml
docs/: MAINTAINERS.md  README.md  case-study-cross-repo-orientation.md  cli-perspective.md  cursor-metrics-nexus.md  inference-console-deep-dive.md  inference-console-tutorial.md  licensing.md  nexus-agent-cursor.md  nexus-scaling-law.md  proof-of-concept.md  repository-analyse.md  repository-analysis.md  token-efficiency.md  tutorial-nexus-cli-and-ui.md  tutorial-nexus-cli-extended.md  tutorial-nexus-opc-isa.md  usage-metrics.md
docs/archive/: README.md  deep-research-report.md
docs/assets/usage-metrics/: README.md
docs/patchnotes/: 2026-04-03-agent-output-und-metriken.md  2026-04-03-nexus-opc-isa.md  README.md  TEMPLATE.md
extras/: gen_usage_metrics_placeholders.py  nexus_benchmark.py
extras/cursor-rules/: README.txt
src/nexus/: __init__.py  __main__.py  cli.py  cli_grep.py  cli_matrix.py  cli_opc.py  cli_policy.py  control_header.py  cursor_rules_cli.py  inference_modes.py  scanner.py  semantic_palette.py  terminal_semantic.py
src/nexus/analysis/: __init__.py  layers.py  mutation_chains.py
src/nexus/core/: __init__.py  graph.py  models.py
src/nexus/cursor_rules/: __init__.py  __main__.py  nexus-over-grep.mdc
src/nexus/output/: __init__.py  confidence_brief.py  context_metrics.py  inference_projection.py  json_export.py  llm_format.py  llm_query_modes.py  perspective.py
src/nexus/parsing/: __init__.py  ast_analyze.py  loader.py  nexus_deny.py  nexus_ignore.py  path_pattern_rules.py
src/nexus/policy/: __init__.py  default_profile.v2.yaml  planner.py  profile.py
src/nexus/resolution/: __init__.py  imports.py
src/nexus/ui/: __init__.py  __main__.py  app.py  main_window.py  session.py  theme.py
src/nexus/ui/projections/: __init__.py  focus_graph.py  json_slice.py  slice_table.py  symbol_detail.py
src/nexus/ui/widgets/: __init__.py  focus_graph_view.py  tags_delegate.py
tests/: test_cli_grep.py  test_cli_matrix.py  test_cli_names_only.py  test_cli_opc.py  test_cli_perspective.py  test_cli_slice_projection.py  test_cli_ui.py  test_confidence.py  test_context_metrics.py  test_cursor_rules_cli.py  test_edge_cases.py  test_entry_point_heuristic.py  test_mutation_paths.py  test_nexus_benchmark.py  test_nexus_deny.py  test_nexus_ignore.py  test_perspective.py  test_perspective_semantics.py  test_scan.py  test_slice_diversity.py  test_slice_same_name.py  test_ui_projections.py  test_v02.py
tests/fixtures/entry_rank_mini/app/resolver/: engine.py
tests/fixtures/entry_rank_mini/app/services/: application.py
usage metrics/: Testbericht-Slice-Spalten-UI-2026-04-03.md
