[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-inference"
version = "0.1.0"
description = "Inference layer for Python: symbols, calls, mutation hints — structured context for LLMs and humans."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Nexus contributors" }]
keywords = ["static-analysis", "ast", "code-intelligence", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.scripts]
nexus = "nexus.cli:main"
nexus-grep = "nexus.cli_grep:main"
nexus-cursor-rules = "nexus.cursor_rules_cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/YOUR_ORG/nexus"
Documentation = "https://github.com/YOUR_ORG/nexus#readme"
Repository = "https://github.com/YOUR_ORG/nexus"
Issues = "https://github.com/YOUR_ORG/nexus/issues"
Changelog = "https://github.com/YOUR_ORG/nexus/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus"]

# Cursor rules must ship inside the wheel (not only .py).
[tool.hatch.build.targets.wheel.force-include]
"src/nexus/cursor_rules/nexus-over-grep.mdc" = "nexus/cursor_rules/nexus-over-grep.mdc"

[tool.hatch.build.targets.sdist]
include = [
  "src/nexus",
  "tests",
  "docs",
  "extras",
  "pyproject.toml",
  "README.md",
  "SECURITY.md",
  "LICENSE",
  "AGENTS.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
