[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-inference"
version = "0.1.0b1"
description = "Inference layer for Python: symbols, calls, mutation hints — structured context for LLMs and humans."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Nexus contributors" }]
keywords = ["static-analysis", "ast", "code-intelligence", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
# Policy profiles (safe-default wrapper) use YAML (safe_load only).
dependencies = ["PyYAML>=6.0"]

[project.scripts]
nexus = "nexus.cli:main"
nexus-grep = "nexus.cli_grep:main"
nexus-cursor-rules = "nexus.cursor_rules_cli:main"
nexus-policy = "nexus.cli_policy:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/MechanicalDeus/Mechanicals-Nexus---Inference-Control"
Documentation = "https://github.com/MechanicalDeus/Mechanicals-Nexus---Inference-Control#readme"
Repository = "https://github.com/MechanicalDeus/Mechanicals-Nexus---Inference-Control"
Issues = "https://github.com/MechanicalDeus/Mechanicals-Nexus---Inference-Control/issues"
Changelog = "https://github.com/MechanicalDeus/Mechanicals-Nexus---Inference-Control/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus"]

# Cursor rules must ship inside the wheel (not only .py).
[tool.hatch.build.targets.wheel.force-include]
"src/nexus/cursor_rules/nexus-over-grep.mdc" = "nexus/cursor_rules/nexus-over-grep.mdc"
"src/nexus/policy/default_profile.v2.yaml" = "nexus/policy/default_profile.v2.yaml"

[tool.hatch.build.targets.sdist]
include = [
  "src/nexus",
  "tests",
  "docs",
  "extras",
  "pyproject.toml",
  "README.md",
  "SECURITY.md",
  "LICENSE",
  "AGENTS.md",
  "NEXUS-REPORT.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
