[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-inference"
version = "0.1.0b1"
description = "Inference layer for Python: symbols, calls, mutation hints — structured context for LLMs and humans."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Nexus contributors" }]
keywords = ["static-analysis", "ast", "code-intelligence", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
# Policy profiles (safe-default wrapper) use YAML (safe_load only).
dependencies = ["PyYAML>=6.0"]

[project.scripts]
nexus = "nexus.cli:main"
nexus-grep = "nexus.cli_grep:main"
nexus-cursor-rules = "nexus.cursor_rules_cli:main"
nexus-policy = "nexus.cli_policy:main"
nexus-console = "nexus.ui.app:main"
nexus-opc = "nexus.cli_opc:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.9.0", "tiktoken>=0.5"]
# Optional: model-aligned token counts for --metrics-json (OpenAI-style BPE).
metrics = ["tiktoken>=0.5"]
# PyQt6: GPLv3 or commercial (Riverbank). See docs/licensing.md before redistributing the GUI.
ui = ["PyQt6>=6.5"]
dev-ui = ["pytest-qt>=4.4"]
# Terminal: ``nexus matrix rain`` (Rich Live). focus/chain degrade to plain text without rich.
matrix = ["rich>=13.7"]

[project.urls]
Homepage = "https://github.com/MechanicalDeus/Mechanicals-Nexus---Inference-Control"
Documentation = "https://github.com/MechanicalDeus/Mechanicals-Nexus---Inference-Control#readme"
Repository = "https://github.com/MechanicalDeus/Mechanicals-Nexus---Inference-Control"
Issues = "https://github.com/MechanicalDeus/Mechanicals-Nexus---Inference-Control/issues"
Changelog = "https://github.com/MechanicalDeus/Mechanicals-Nexus---Inference-Control/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus"]

# Cursor rules must ship inside the wheel (not only .py).
[tool.hatch.build.targets.wheel.force-include]
"src/nexus/cursor_rules/nexus-over-grep.mdc" = "nexus/cursor_rules/nexus-over-grep.mdc"
"src/nexus/policy/default_profile.v2.yaml" = "nexus/policy/default_profile.v2.yaml"

[tool.hatch.build.targets.sdist]
include = [
  "src/nexus",
  "tests",
  "docs",
  "console tutorial",
  "extras",
  "pyproject.toml",
  "README.md",
  "TUTORIAL.md",
  "SECURITY.md",
  "LICENSE",
  "AGENTS.md",
  "NEXUS-REPORT.md",
  "CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=nexus --cov-report=term-missing --cov-report=xml --cov-fail-under=52"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Mini-Repos unter tests/fixtures sind absichtlich unvollständig (undef. Namen).
per-file-ignores = { "tests/fixtures/**" = ["F821"] }

[tool.coverage.run]
branch = true
source = ["src/nexus"]
